app/src/main/java/com/example/todoapp/domain/error/EmptyTasksError.kt
package com.example.todoapp.domain.error

import java.lang.Exception

/**
 * EmptyTasksError
 *
 * @author (c) 2021, UVI TECH SAPI De CV, KAVAK
 */
class EmptyTasksError: Exception()